# ncc

./: .clangd  .gitignore  README.md  build.ps1  c_ncc.bnf  meson.build  meson.options  time_output.txt
.cache/clangd/index/: align.h.9429E2EAD84151D4.idx  align.h.A7376C1DD502A9BF.idx  alloc.h.771CBE9D3F71A21F.idx  alloc.h.D1A5A3736E0285E7.idx  array.h.CA7E41B16F65FB7B.idx  array.h.E169D31B0092BE7B.idx  bnf.c.C4D1A7CB34871EFF.idx  bnf.h.1AB3EC5EC766925B.idx  bnf.h.29A7CA354691C066.idx  buffer.h.24EE45A57AFB9D64.idx  buffer.h.E7D0700A6835D5CE.idx  c_tokenizer.c.4CDB2FE6EBFAF1F0.idx  c_tokenizer.h.2E1B72B28A951DD1.idx  commander.c.18DAA91A6AFE821E.idx  commander.h.FC715DAA714E78FC.idx  data_lock.h.5104027987E4A9A0.idx  data_lock.h.E0B16B5206DF9A61.idx  dict.h.440FAA800171E8C3.idx  dict.h.8BF7C4E9C76BF76A.idx  encoding.h.4B5448A61D75CF02.idx  encoding.h.C7031538E14F286C.idx  grammar.c.46EC3160C0F9E000.idx  grammar.h.53C323ED2BE0CCFD.idx  grammar.h.F5802527C85153BA.idx  grammar_internal.h.1001BA7A5A53BDE8.idx  hash.h.2F109C47DC9BA384.idx  hash.h.F9F0599A2E323ED8.idx  identifiers.h.1A5D68F480CF6C37.idx  identifiers.h.FFB2BC8DD18D3A4B.idx  list.h.708F0E32C6E19CE9.idx  list.h.DC46DA9CFDC5530C.idx  macros.h.0457AC51DB2F003E.idx  macros.h.725674A660D89CF9.idx  n00b.h.3A09B78E11AD1EBC.idx  ncc.c.DA74FF2C59342B13.idx  ncc.h.2997F3C41C11D513.idx  option.h.05A4A549039ACB7B.idx  option.h.933798B64DA8E6D4.idx  parse_forest.c.BAB8612A70615C6D.idx  parse_forest.h.C1177D54245108FD.idx  (+79 more)
docker/: Dockerfile  linux-build.sh
docs/: gc_typemaps.md  static_objects_pipeline.md  variant_precise_scan_and_union_deprecation.md  windows-sdk-header-compat-issue.md
include/: ncc.h  ncc_runtime.h
include/internal/: ncc_opts.h
include/internal/parse/: grammar_internal.h  pwz_internal.h
include/lib/: alloc.h  arena.h  array.h  buffer.h  dict.h  hash.h  list.h  option.h  result.h  string.h  style.h  tree.h
include/parse/: c_tokenizer.h  commander.h  comptime_build.h  comptime_check.h  comptime_guard.h  comptime_image_emit.h  comptime_meta.h  crt_entry.h  emit.h  gcmap_prelink.h  nodiscard.h  nullability.h  parse_forest.h  parse_tree.h  pwz.h  static_init_degrade.h  symbol_populate.h  symtab.h  token.h  tree_dump.h  type_infer.h  union_deprecation.h
include/scanner/: scanner.h  token_stream.h
include/unicode/: encoding.h  identifiers.h  properties.h  query.h
include/util/: platform.h  type_normalize.h
include/xform/: transform.h  xform_data.h  xform_gc_globals.h  xform_gc_typemap.h  xform_helpers.h  xform_rpc.h  xform_rstr.h  xform_static_object.h  xform_template.h  xform_type_layout.h
scripts/: build.sh  package_windows_smoke.sh
scripts/windows-python-site/: sitecustomize.py
src/: ncc.c
src/lib/: alloc.c  string.c
src/parse/: bnf.c  c_tokenizer.c  commander.c  comptime_build.c  comptime_check.c  comptime_guard.c  comptime_image_emit.c  comptime_meta.c  crt_entry.c  emit.c  gcmap_prelink.c  grammar.c  parse_forest.c  parse_tree.c  pwz.c  static_init_degrade.c  symbol_populate.c  symtab.c  tree_dump.c  type_infer.c  typedef_walk.c
src/scanner/: scan_builtins.c  scanner.c  token_stream.c
src/util/: platform.c  sha256.c  type_normalize.c
src/xform/: nodiscard.c  nullability.c  transform.c  union_deprecation.c  xform_array_literal.c  xform_bang.c  xform_constexpr.c  xform_constexpr_paste.c  xform_contracts.c  xform_defer.c  xform_gc_globals.c  xform_gc_stack_maps.c  xform_gc_typemap.c  xform_generic_struct.c  xform_helpers.c  xform_kargs_vargs.c  xform_nullable.c  xform_once.c  xform_option.c  xform_rpc.c  xform_rstr.c  xform_static_image.c  xform_static_init.c  xform_static_object.c  xform_template.c  xform_try.c  xform_type_layout.c  xform_typehash.c  xform_typeid.c  xform_typestr.c
templates/: bang.c.tmpl  once.c.tmpl  once_void.c.tmpl  rpc_bidi.c.tmpl  rpc_client_stream.c.tmpl  rpc_server_stream.c.tmpl  rpc_unary.c.tmpl
test/: dep_header.h  err_array_literal_explicit_non_array_target.c  err_array_literal_field_bound_expr.c  err_array_literal_local_mutable.c  err_array_literal_missing_field_policy.c  err_array_literal_missing_helper.c  err_array_literal_nested_mismatch.c  err_array_literal_non_array_target.c  err_array_literal_pointer_target.c  err_array_literal_rstr_type.c  err_array_literal_scalar_nested.c  err_array_literal_statement.c  err_array_literal_transient_field.c  err_array_literal_union_pointer.c  err_array_literal_unsupported_elem.c  err_auto_gc_roots_incomplete_struct.c  err_bang_at_file_scope.c  err_bang_missing_parens.c  err_bang_void_fn.c  err_buffer_literal_target.c  err_constexpr_runtime_fail.c  err_defer_escape.c  err_defer_goto.c  err_dict_literal_bare_in_non_dict_target.c  err_dict_literal_duplicate_key.c  err_dict_literal_local_mutable.c  err_dict_literal_missing_helper.c  err_dict_literal_non_dict_target.c  err_dict_literal_struct_pointer_key.c  err_dict_literal_stub.c  err_dict_literal_unsupported_key_type.c  err_dict_literal_unsupported_value_type.c  err_function_contract_call.c  err_function_contract_declaration.c  err_function_contract_goto.c  err_function_contract_mutates_array.c  err_function_contract_mutates_global.c  err_function_contract_mutates_member.c  err_function_contract_mutates_param.c  err_function_contract_mutates_param_after_for_local.c  (+196 more)
toolchains/: windows-x86_64-clang.ini
